# obsetync

./: .dockerignore  .env.example  .gitignore  .secrets-denylist.example  Cargo.toml  Dockerfile  Dockerfile.dev  LICENSE  README.md  THIRD-PARTY-LICENSES.md  docker-compose.e2e.yml  docker-compose.yml  flake.nix  justfile  manifest.json  obsetync-transport-v2.md  versions.json
.cargo/: config.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
crates/e2e-tests/: Cargo.toml
crates/e2e-tests/src/: lib.rs
crates/e2e-tests/tests/: concurrency.rs  conflicts.rs  enrollment.rs  history_export.rs  realtime_ws.rs  single_device.rs  smoke.rs  stale_tree_revert.rs  text_merge.rs  transport_security.rs  two_device_sync.rs
crates/sync-core/: Cargo.toml
crates/sync-core/src/: chunk.rs  conflict.rs  content_store.rs  diff.rs  fastcdc_chunker.rs  hash.rs  lib.rs  merge.rs  store.rs  sync_rules.rs  tree.rs  wasm.rs
crates/sync-schema/: Cargo.toml
crates/sync-schema/schema/: chunk.fbs
crates/sync-schema/src/: chunk_generated.rs  lib.rs
crates/sync-server/: Cargo.toml
crates/sync-server/src/: admin.rs  api.rs  box_key.rs  bridge.rs  ca.rs  config.rs  crdt.rs  devices.rs  enrollment.rs  error.rs  guard.rs  ignore_match.rs  main.rs  secure.rs  state.rs  storage.rs  tls.rs  ws.rs  ws_ticket.rs
docs/: c4-1-context.md  c4-2-containers.md  c4-3-plugin.md  c4-3-server.md  c4-3-wasm.md  conflict-resolution.md  transport.md
plugin/: esbuild.config.mjs  manifest.json  package-lock.json  package.json  styles.css  tsconfig.json
plugin/src/: api.ts  conflict-ui.ts  debug-log.ts  debug-modal.ts  ignore.test.ts  ignore.ts  journal.ts  main.ts  platform.ts  pull.ts  push.ts  secure.ts  settings.ts  sync-base.ts  sync.ts  ws.ts
tasks/v2-transport-spec-fixes/: context.md  plan.md  results.md
