[package]
name = "sync-server"
version.workspace = true
edition.workspace = true

[dependencies]
sync-core = { path = "../sync-core" }

tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
blake3.workspace = true

axum = "0.8"
clap = { version = "4", features = ["derive"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
sha2 = "0.10"
rand = "0.9"
rustls = "0.23"
rcgen = { version = "0.13", features = ["pem", "x509-parser"] }
tokio-rustls = "0.26"
axum-server = { version = "0.8", features = ["tls-rustls"] }
pem = "3"
