[package]
name = "sync-server"
version.workspace = true
edition.workspace = true

[dependencies]
sync-core = { path = "../sync-core" }

tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
blake3.workspace = true

axum = "0.8"
clap = { version = "4", features = ["derive"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
sha2 = "0.10"
rand = "0.9"
thiserror = { workspace = true }

# Option B secure transport: X25519 ECDH + HKDF-SHA256 + AES-256-GCM.
# Replaces all cert/CA infrastructure.
x25519-dalek = { version = "2", features = ["static_secrets", "getrandom"] }
base64 = "0.22"
hkdf = "0.12"
aes-gcm = { version = "0.10", default-features = false, features = ["aes", "alloc"] }

[dev-dependencies]
tempfile = "3"
