[package]
name = "sync-server"
version.workspace = true
edition.workspace = true

[dependencies]
sync-core = { path = "../sync-core" }

tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
blake3.workspace = true

# ws: the Ph2 notify channel (see tasks/realtime-roadmap.md) — server→client
# "root changed" frames; clients then pull over the sealed HTTP channel.
axum = { version = "0.8", features = ["ws"] }
# Split the WebSocket into sink/stream halves so one task can forward
# broadcast frames while another reads client subs/pings.
futures-util = { version = "0.3", default-features = false, features = ["std", "sink"] }
clap = { version = "4", features = ["derive"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
# Vault export: tar assembled into an anonymous tempfile (auto-reclaimed by
# the OS on close), streamed out via tokio-util's ReaderStream — bounded
# memory regardless of vault size.
tar = "0.4"
tempfile = "3"
# Admin diff viewer: unified line diffs between two versions of a file.
similar = "2"
tokio-util = { version = "0.7", features = ["io"] }
sha2 = "0.10"
rand = "0.9"
thiserror = { workspace = true }

# Secure transport primitives: X25519 ECDH + HKDF-SHA256 + AES-256-GCM.
# Replaces all cert/CA infrastructure.
x25519-dalek = { version = "2", features = ["static_secrets", "getrandom"] }
base64 = "0.22"
hkdf = "0.12"
aes-gcm = { version = "0.10", default-features = false, features = ["aes", "alloc"] }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
